// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Верстка компонента <RadioButton> Дефолтная 1`] = `
<div
  className="sc-ifAKCX gPrOSU"
  disabled={false}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="sc-bdVaJa cjORyY"
  >
    <div
      checked={false}
      className="sc-bwzfXH kbJlne"
      color="blue"
      disabled={false}
    />
    <div
      checked={false}
      className="sc-htpNat hQFrKh"
      color="blue"
      disabled={false}
    />
  </div>
</div>
`;

exports[`Верстка компонента <RadioButton> Зеленого цвета 1`] = `
<div
  className="sc-ifAKCX gPrOSU"
  disabled={false}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="sc-bdVaJa cjORyY"
  >
    <div
      checked={false}
      className="sc-bwzfXH kbJlne"
      color="green"
      disabled={false}
    />
    <div
      checked={false}
      className="sc-htpNat hEyLbp"
      color="green"
      disabled={false}
    />
  </div>
</div>
`;

exports[`Верстка компонента <RadioButton> Неактивная 1`] = `
<div
  className="sc-ifAKCX eeEfuI"
  disabled={true}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="sc-bdVaJa cjORyY"
  >
    <div
      checked={false}
      className="sc-bwzfXH iKRUrJ"
      color="blue"
      disabled={true}
    />
    <div
      checked={false}
      className="sc-htpNat iIsfHI"
      color="blue"
      disabled={true}
    />
  </div>
</div>
`;

exports[`Верстка компонента <RadioButton> Отмеченная 1`] = `
<div
  className="sc-ifAKCX gPrOSU"
  disabled={false}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="sc-bdVaJa cjORyY"
  >
    <div
      checked={true}
      className="sc-bwzfXH bqyPxt"
      color="blue"
      disabled={false}
    />
    <div
      checked={true}
      className="sc-htpNat gWVkrB"
      color="blue"
      disabled={false}
    />
  </div>
</div>
`;

exports[`Верстка компонента <RadioButton> С подписью 1`] = `
<div
  className="sc-ifAKCX gPrOSU"
  disabled={false}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="sc-bdVaJa cjORyY"
  >
    <div
      checked={false}
      className="sc-bwzfXH kbJlne"
      color="blue"
      disabled={false}
    />
    <div
      checked={false}
      className="sc-htpNat hQFrKh"
      color="blue"
      disabled={false}
    />
  </div>
  <div
    className="sc-bxivhb izKojs"
    disabled={false}
  >
    Label
  </div>
</div>
`;

exports[`Верстка компонента <RadioButton> Синего цвета 1`] = `
<div
  className="sc-ifAKCX gPrOSU"
  disabled={false}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="sc-bdVaJa cjORyY"
  >
    <div
      checked={false}
      className="sc-bwzfXH kbJlne"
      color="blue"
      disabled={false}
    />
    <div
      checked={false}
      className="sc-htpNat hQFrKh"
      color="blue"
      disabled={false}
    />
  </div>
</div>
`;

exports[`Верстка компонента <RadioButton> Увеличенный размер 1`] = `
<div
  className="sc-ifAKCX gPrOSU"
  disabled={false}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="sc-bdVaJa ddwLo"
  >
    <div
      checked={false}
      className="sc-bwzfXH kbJlne"
      color="blue"
      disabled={false}
    />
    <div
      checked={false}
      className="sc-htpNat gtFvXH"
      color="blue"
      disabled={false}
    />
  </div>
</div>
`;
